[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scenes/Slider.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/background.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Game.gd" type="Script" id=4]
[ext_resource path="res://Scenes/Ball.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/EnemySlider.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Goal.tscn" type="PackedScene" id=7]
[ext_resource path="res://Sprites/PlayerGoal.png" type="Texture" id=8]
[ext_resource path="res://Fonts/Pixel.ttf" type="DynamicFontData" id=9]
[ext_resource path="res://Scenes/Instructions.tscn" type="PackedScene" id=10]
[ext_resource path="res://Sprites/Arrow.png" type="Texture" id=11]

[sub_resource type="DynamicFont" id=1]
size = 100
font_data = ExtResource( 9 )

[node name="Game" type="Node2D"]
script = ExtResource( 4 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Background" type="TextureRect" parent="."]
modulate = Color( 0.6, 0.6, 0.6, 1 )
margin_left = -77.4583
margin_top = -73.0441
margin_right = 1079.54
margin_bottom = 641.956
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerGoal" parent="." instance=ExtResource( 7 )]
position = Vector2( 503.271, 614.357 )
teamScored = "ENEMY"

[node name="TextureRect" parent="PlayerGoal" index="1"]
margin_left = -921.74
margin_top = -96.2599
margin_right = 796.26
margin_bottom = 96.7401
texture = ExtResource( 8 )

[node name="EnemyGoal" parent="." instance=ExtResource( 7 )]
position = Vector2( 500, -18.35 )

[node name="Slider" parent="." instance=ExtResource( 1 )]
position = Vector2( 497.802, 521 )
SPEED = 425

[node name="Arrow" type="Sprite" parent="Slider"]
modulate = Color( 1, 1, 1, 0.490196 )
position = Vector2( -0.907166, -0.106201 )
texture = ExtResource( 11 )
offset = Vector2( 50, 0 )

[node name="Wall2" parent="." instance=ExtResource( 3 )]
position = Vector2( 978.563, -113.511 )

[node name="Wall" parent="." instance=ExtResource( 3 )]
position = Vector2( 24.1584, -101.496 )

[node name="Ball" parent="." instance=ExtResource( 5 )]
position = Vector2( 502.343, 262.243 )

[node name="EnemySlider" parent="." instance=ExtResource( 6 )]
position = Vector2( 505.542, 73 )
SPEED = 425

[node name="EnemyScoreBoard" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.215686 )
margin_left = 68.0
margin_top = 114.0
margin_right = 254.0
margin_bottom = 240.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScoreBoard" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.215686 )
margin_left = 784.686
margin_top = 401.225
margin_right = 970.686
margin_bottom = 527.225
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SlowMoTimer" type="Timer" parent="."]

[node name="GoalTimer" type="Timer" parent="."]

[node name="Instructions" parent="." instance=ExtResource( 10 )]
[connection signal="timeout" from="SlowMoTimer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="GoalTimer" to="." method="_on_GoalTimer_timeout"]

[editable path="PlayerGoal"]
